--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,20 @@
 language: go
-
+os:
+  - linux
+  - osx
 go:
-  - go1.7
+  - "go1.7"
+  - "go1.8"
+  - "go1.9"
+  - "go1.10"
+go_import_path: github.com/kataras/go-mailer
+install:
+  - go get ./...
+script:
+  - go test -v -cover ./...
+after_script:
+  # examples
+  - cd ./_examples
+  - go get ./...
+  - go test -v -cover ./...
+  - cd ../
