nothing important here, now the cli tool remains: https://github.com/kataras/go-mailer#todo

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ install:
 script:
   - go test -v -cover ./...
 after_script:
-  # examples
-  - cd ./_examples
+  # example
+  - cd ./_example
   - go get ./...
   - go test -v -cover ./...
   - cd ../
